[package]
name = "usb-host"
version = "0.1.0"
authors = ["Codetector <codetector@codetector.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = { version = "1.2.0", default-features = false }
hashbrown = { version = "0.6.3", features = [] }
log = { version = "0.4.8", features = [] }
modular-bitfield = "0.6.0"
spin = "0.5.2"
